added short description of sklearn

--- a/notebboks/01_sklern_fundmentals.ipynb
+++ b/notebboks/01_sklern_fundmentals.ipynb
@@ -4,9 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "# Wprowadzenie do Scikit-Learn\n",
+    "\n",
+    "**Scikit-Learn** to jedna z najpopularniejszych bibliotek do uczenia maszynowego w języku Python. Jest to otwartoźródłowy pakiet, który oferuje łatwe w użyciu narzędzia do budowy i testowania modeli uczenia maszynowego, z naciskiem na klasyfikację, regresję, klasteryzację i przetwarzanie danych. Scikit-Learn bazuje na takich bibliotekach jak **NumPy**, **SciPy** i **matplotlib**, co pozwala na efektywne przetwarzanie danych i wizualizację wyników.\n",
+    "\n",
+    "## Główne Zalety Scikit-Learn\n",
+    "1. **Łatwość Użycia**: Prosty i spójny interfejs API, który sprawia, że uczenie maszynowe jest przystępne nawet dla osób, które dopiero zaczynają.\n",
+    "2. **Bogaty Zestaw Algorytmów**: Scikit-Learn oferuje szeroką gamę algorytmów uczenia nadzorowanego i nienadzorowanego, w tym klasyfikację, regresję, redukcję wymiarowości, oraz metody klasteryzacji.\n",
+    "3. **Dobra Dokumentacja**: Pakiet posiada bardzo dobrą dokumentację oraz wiele przykładów, co ułatwia naukę i szybkie wdrażanie.\n",
+    "4. **Skalowalność**: Idealny do prototypowania, z łatwością pozwala przeskalować modele na większe zbiory danych za pomocą innych narzędzi, takich jak TensorFlow czy PyTorch.\n",
+    "\n",
+    "Scikit-Learn jest idealnym narzędziem zarówno do nauki, jak i do szybkiego prototypowania modeli uczenia maszynowego. Dzięki intuicyjnemu interfejsowi, szerokiemu wachlarzowi funkcji i dobrej dokumentacji, jest to jeden z pierwszych wyborów dla każdego, kto zaczyna przygodę z uczeniem maszynowym w Pythonie oraz profesjonalistów wdrazających rozwiązania prdodukcyjne.\n",
+    "\n",
+    "## Materiały uzupełniające\n",
+    "\n",
+    "- **Dokumentacja scikit-learn** : https://scikit-learn.org/stable/\n",
+    "- **Kurs Supervised Learning with Scikit-Learn na DC** https://app.datacamp.com/learn/courses/supervised-learning-with-scikit-learn\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Przygotowanie środowiska\n",
     "\n",
-    "Instalacja najnowszej wersji pakietu scikit-learn (na dzień 25-10-2024)"
+    "Instalacja najnowszych wersji pakietów (na dzień 25-10-2024)"
    ]
   },
   {
@@ -52,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,10 +171,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Stwórz nową ramkę danych zawierającą wszytskie cechy i zmienną celu\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Stwórz raort i wyeksportuj go do pliku. Przeanalizuj wyniki."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing danych w scikit-learn"
+   ]
   }
  ],
  "metadata": {
