--- a/notebboks/01_sklern_fundmentals.ipynb
+++ b/notebboks/01_sklern_fundmentals.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# za pomocą dostępnych funkcji lub metod bibloteki pandas określ czy, ewentualnie które kolumny mają brakujące wartości\n",
+    "# za pomocą dostępnych funkcji lub metod bibloteki pandas określ czy, ewentualnie które kolumny mają brakujące wartości i zlicz wystąpienia\n",
     "\n",
     "# Twój kod wykonaj ponizej:\n",
     "\n"
@@ -118,8 +118,7 @@
     "# jeeli, któraś kolumna nie jest zaimportowana jako poprawny typ moe uyć metody astype() na obiekcie pd.DataFrame aby zmienić typ danych\n",
     "\n",
     "# Twój kod wykonaj ponizej:\n",
-    "\n",
-    "features.dtypes"
+    "\n"
    ]
   },
   {
@@ -188,7 +187,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing danych w scikit-learn"
+    "# Preprocessing danych w scikit-learn\n",
+    "\n",
+    "## Ćwiczenie: Preprocesor do uzupełniania brakujących wartości\n",
+    "W uczeniu maszynowym przetwarzanie danych jest kluczowym krokiem, który wpływa na wydajność modeli. Scikit-Learn oferuje różne narzędzia do przetwarzania danych, takie jak:\n",
+    "- **Imputer** (`SimpleImputer`) – do uzupełniania brakujących wartości\n",
+    "- **Skalowanie cech** (`StandardScaler`, `MinMaxScaler`) – do normalizacji danych\n",
+    "- **Kodowanie kategoryczne** (`OneHotEncoder`, `LabelEncoder`) – do przekształcania zmiennych kategorycznych na wartości numeryczne\n",
+    "- **Normalizacja** (`Normalizer`) – do normalizacji danych do jednostkowej normy\n",
+    "- **Redukcja wymiarowości** (`PCA`) – do zmniejszania liczby cech\n",
+    "#\n",
+    "W tym ćwiczeniu skupimy się na użyciu **SimpleImputer**, który jest preprocesorem do uzupełniania brakujących wartości w zbiorze danych.\n",
+    "\n",
+    "**Dokumentacja metod imputacji zmiennych**: https://scikit-learn.org/stable/modules/impute.html\n",
+    "\n",
+    "Zwróć uwagę na rónicę w metodach fit() i fit_transform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stwórz obiekt SimpleImputer i dopasuj go do danych, wykonaj imputację metodą zastępowania średnią\n",
+    "\n",
+    "\n",
+    "# sprawdź czy braujące wartości zostały uzupełnione\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Podział zbioru na treningowy i testowy\n",
+    "\n",
+    "## Ćwiczenie: Dzielenie zbioru na uczący i testowy (80%/20%)\n",
+    "\n",
+    "W uczeniu maszynowym często potrzebujemy podzielić nasz zbiór danych na zbiór treningowy i testowy, aby móc ocenić wydajność naszego modelu na danych, które nie były używane podczas treningu. Scikit-Learn oferuje do tego celu funkcję `train_test_split` z modułu `model_selection`.\n",
+    "\n",
+    "Funkcja `train_test_split` przyjmuje kilka argumentów, z których najważniejsze to:\n",
+    "- **`test_size`**: Określa proporcję danych, które mają zostać przeznaczone na zbiór testowy (np. `0.2` oznacza, że 20% danych zostanie użyte do testów).\n",
+    "- **`random_state`**: Ustalając wartość `random_state`, możemy zagwarantować powtarzalność wyników podziału danych. Dzięki temu za każdym razem, gdy uruchomimy kod, podział danych będzie identyczny.\n",
+    "- **`stratify`**: Argument `stratify` umożliwia dokonanie podziału danych z uwzględnieniem rozkładu zmiennej celu. Jeśli wskażemy zmienną celu jako wartość `stratify`, wówczas podział na zbiór treningowy i testowy będzie uwzględniał proporcje klas w oryginalnym zbiorze danych.\n",
+    "\n",
+    "Dokumentacja funkcji z przykłądami uzycia: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html#sklearn.model_selection.train_test_split\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Podziel zbiór na uczący i testowy, zapewnij reprodukowalność losowania i stratyfikację\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trenowanie modeli klasyfikacyjnych\n",
+    "\n",
+    "W tej części nauczymy się trenować dwa popularne modele klasyfikacyjne: **Drzewo Decyzyjne** oraz **Las Losowy**. Oba modele należą do grupy algorytmów uczących się na podstawie drzewa decyzyjnego, a Las Losowy jest zespołem wielu drzew decyzyjnych, co zazwyczaj pozwala na uzyskanie lepszej jakości klasyfikacji.\n",
+    "\n",
+    "- **Dokumentacja klasyfikatora Drzewa Decyzyjnego**: https://scikit-learn.org/stable/modules/tree.html#classification\n",
+    "- **Dokumentacja klasyfikatora Lasu Losowego** https://scikit-learn.org/stable/modules/ensemble.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zadania:\n",
+    "\n",
+    "# 1. Wytrenuj model drzewa decyzyjnego i lasu losowego (z uzyciem domyslnych parametrów)\n",
+    "# 2. Dokonaj predykcji na danych treningowych i tesotwych (medota predict() i predict_proba())\n",
+    "\n",
+    "# Obikety wytrenowanych modeli oraz wyniki predykcji zapisz do zmiennych\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Porównanie klasyfikatorów\n",
+    "\n",
+    "W tym ćwiczeniu porównamy wydajność wytrenowanych modeli na danych testowych. Użyjemy do tego **macierzy konfuzji** oraz **classification_report**, które dostarczają szczegółowych informacji na temat wyników klasyfikacji.\n",
+    "\n",
+    "- **Dokumentacja confusion_matrix** https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html#sklearn.metrics.confusion_matrix\n",
+    "- **Dokumentacja classifiction_report** https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dla Drzewa decyzyjnego oraz lasu losowego wygeneruj macierz konfucji i raport klasyfikacji\n",
+    "# Zrób to dla danych testowych i treningowych, porównaj wyniki\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, classification_report"
    ]
   }
  ],
