--- a/notebooks/01_sklern_fundmentals.ipynb
+++ b/notebooks/01_sklern_fundmentals.ipynb
@@ -219,10 +219,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stwórz obiekt SimpleImputer i dopasuj go do danych, wykonaj imputację metodą zastępowania średnią\n",
+    "# Stwórz obiekt SimpleImputer i dopasuj go do danych, wykonaj imputację metodą właściwą dla danego typu danych\n",
     "\n",
     "\n",
     "# sprawdź czy braujące wartości zostały uzupełnione\n",
+    "\n",
+    "\n",
+    "#Zakoduj dane kategoryczne metodą OneHot Encoder\n",
     "\n"
    ]
   },
