--- a/notebooks/01_sklern_fundmentals.ipynb
+++ b/notebooks/01_sklern_fundmentals.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,21 +91,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# podejzyj zaimportowaną datra frame\n",
-    "\n",
-    "features"
+    "# podejzyj zaimportowaną datra frame\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# za pomocą dostępnych funkcji lub metod bibloteki pandas określ czy, ewentualnie które kolumny mają brakujące wartości i zlicz wystąpienia\n",
     "\n",
-    "# Twój kod wykonaj ponizej:\n",
-    "\n"
+    "# Twój kod wykonaj ponizej:\n"
    ]
   },
   {
@@ -123,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# określ rozkłąd zmiennej celu 'targets' (jaki % kleintów skorzysta z subskrybcji)"
+    "# określ rozkłąd zmiennej celu 'targets' (jaki % kleintów skorzysta z subskrybcji)\n"
    ]
   },
   {
@@ -170,17 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Stwórz nową ramkę danych zawierającą wszytskie cechy i zmienną celu\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Stwórz raort i wyeksportuj go do pliku. Przeanalizuj wyniki."
+    "# Stwórz raort i wyeksportuj go do pliku. Przeanalizuj wyniki.\n"
    ]
   },
   {
@@ -206,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
